post scrollbar fixes

--- a/css/main.css
+++ b/css/main.css
@@ -5693,7 +5693,6 @@ a {
   overflow-x: auto;
   padding-bottom: 1.25rem;
   max-width: 60.875rem;
-  width: 300px;
 }
 .product__details-labels::-webkit-scrollbar {
   height: 12px;
